[package]
name = "five_b"
version = "0.1.0"
authors = ["ray33ee <30669752+ray33ee@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
convert-base = "1.1.1"
half = "1.7.1"
chrono = "0.4.19"